[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Menu/background.png" type="Texture" id=1]
[ext_resource path="res://menufont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ostrich-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Pause Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0.592157, 0.592157, 0.592157, 1 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[node name="Pause Menu" type="Popup"]
margin_left = -448.0
margin_top = -252.0
margin_right = 404.0
margin_bottom = 228.0
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_left = 350.0
margin_top = 100.0
margin_right = 546.0
margin_bottom = 404.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
margin_right = 196.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 304 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 196.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 196.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 64 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 196.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]Pause Menu[/center]"
text = "Pause Menu"
fit_content_height = true
scroll_active = false

[node name="Resume" type="TextureButton" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 196.0
margin_bottom = 182.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Resume"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/Resume/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Resume[/center]"
text = "Resume"

[node name="Restart" type="TextureButton" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 196.0
margin_bottom = 234.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Restart"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/Restart/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Restart[/center]"
text = "Restart"

[node name="Exit" type="TextureButton" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 196.0
margin_bottom = 286.0
texture_normal = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/Exit"]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 43.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/Exit/MarginContainer"]
margin_right = 172.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Exit[/center]"
text = "Exit"
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
